compiler/tests/dfence-checker/success/bug_887.jazz
fn test_msf(reg u32 x) {
  while {
    _ = #init_msf();
  } (x != 0) {
    x = 0;
  }
}

#[sct="secret → public"]
fn test_venv(reg u32 s) -> reg u32 {
  reg u32 i r;
  r = 0;
  i = 0;
  while {
    r = 0;
  } (i < 10) {
    r = s;
    i += 1;
  }
  return r;
}
